--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
-<app-face-snap [faceSnap]="mySnap"></app-face-snap>
-<!-- indépendance des  instances d'un component -->
-<app-face-snap [faceSnap]="myOtherSnap"></app-face-snap>
-<app-face-snap [faceSnap]="myLastSnap"></app-face-snap>
 
+<!-- indépendance des  instances d'un component -->
+
+<!-- <app-face-snap [faceSnap]="mySnap"></app-face-snap>
+<app-face-snap [faceSnap]="myOtherSnap"></app-face-snap>
+<app-face-snap [faceSnap]="myLastSnap"></app-face-snap> -->
+
+
+
+<!-- La directive  *ngFor  vous permet d'insérer un élément dans le DOM pour chaque élément dans un tableau. -->
+<!-- La syntaxe  let element of array  vous donne accès à l'élément de chaque itération, vous permettant de l'injecter dans un component, par exemple. -->
+<app-face-snap *ngFor="let faceSnap of faceSnaps" [faceSnap]="faceSnap"></app-face-snap>
+
+ <!-- Pour chaque élément du tableau faceSnaps je génère un faceSnap component
+ et à la propriété faceSnap j'associe l'élément du tableau faceSnaps à la propriété du component-->
