--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+// ajout de styles globaux de class global à ce fichier qui seront appliqués partout dans l'application
 
 * {
     font-family: Roboto, Helvetica, sans-serif;
